# NumcraftRust

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  package-lock.json  package.json  setup.sh
.cargo/: config  config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  check.yml  publish.yml
crafts/: chest.json  crafting_table.json  grass.json  planks.json  stone.json
src/: camera.rs  chunk.rs  constants.rs  eadk.rs  entity.rs  frustum.rs  game.rs  game_ui.rs  hud.rs  input_manager.rs  inventory.rs  main.rs  menu.rs  mesh.rs  misc.rs  physic.rs  player.rs  renderer.rs  save_manager.rs  settings.rs  storage.c  storage.h  storage.rs  storage_lib.rs  storage_manager.rs  timing.rs  utils.rs  window.rs  world.rs
src/eadk/: backlight.rs  display.rs  keyboard.rs  macros.rs  random.rs  time.rs
src/eadk/storage/: mod.rs
src/entity/: item.rs  mod.rs
src/game/: crafting_manager.rs  game_menus.rs  game_uis.rs  mod.rs
src/libs/: storage.c
src/nadk/: adresses.rs  display.rs  keyboard.rs  macros.rs  panic_handler.rs  random.rs  utils.rs
src/nadk/storage/: mod.rs
src/renderer/: engine_3d.rs  entity.rs  frustum.rs  hud.rs  menus.rs  mesh.rs  misc.rs  mod.rs  ray_tracer.rs  renderer_engine3d.rs  renderer_game_ui.rs  renderer_hud.rs  renderer_menus.rs  renderer_misc.rs  ui.rs
src/world/: chunk.rs  chunk_container.rs  chunk_manager.rs  mod.rs  structures.rs  world_generator.rs
structs/: house1.json  tree1.json
