cargo-features = ["profile-rustflags"]
[package]
name = "Numcraft"
version = "0.0.2"
authors = ["Yannis300307"]
edition = "2024"

[profile.dev]
panic="abort"
strip=true
opt-level= "z"
lto = true
codegen-units = 1

[profile.release]
panic="abort"
strip=true
opt-level= 3
lto = true
codegen-units = 1


[dependencies]
nalgebra = {version = "0.33.2", default-features = false, features = [ "libm" ]}
libm = "0.2.15"
format_no_std = "1.2.0"
heapless = "0.8.0"
cbitmap = "0.3.2"
cortex-m = {version="0.7.7", features=["critical-section-single-core"]}
embedded-alloc = "0.6.0"
fastnoise-lite = { version="1.1.1", default-features=false, features = ["libm"] }
bresenham = "0.1.1"
strum = {version= "0.27.1", default-features=false, features = ["derive"] }


[target.'cfg(any(windows, unix))'.dependencies]
minifb = "0.28"
rand = "0.9.1"

[build-dependencies]
image = "0.25.6"
