cargo-features = ["profile-rustflags"]
[package]
name = "Numcraft"
version = "0.1.3"
authors = ["Yannis300307"]
edition = "2024"

[[bin]]
name = "Numcraft"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lib]
path = "src/main.rs"
bench = false
crate-type = ["cdylib"]
name = "numcraft_sim"

[features]

debug_ui = []

[profile.dev]
panic="abort"
strip=true
opt-level= "z"
lto = true
codegen-units = 1

[profile.release]
panic="abort"
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
nalgebra = {version = "0.33.2", default-features = false, features = ["libm"]}
libm = "0.2.15"
format_no_std = "1.2.0"
heapless = "0.8.0"
cortex-m = {version="0.7.7", features=["critical-section-single-core"]}
embedded-alloc = "0.6.0"
fastnoise-lite = { version="1.1.1", default-features=false, features = ["libm"] }
bresenham = "0.1.1"
lz4_flex = {version="0.11.5", default-features=false}
postcard = {version = "1.1.2", features=["alloc"]}
serde = {version = "1.0.219", default-features=false}
enum-iterator = "2.3.0"
rand_xorshift = "0.4.0"
rand_core = "0.9.3"

[build-dependencies]
image = "0.25.6"
cc = "1.2.27"
regex = "1.11.1"
serde_json = "1.0.145"
serde = {version = "1.0.219", features = ["derive"]}
postcard = {version = "1.1.2", features=["alloc"]}
